# ftp

./: .clang-format  .gitignore  CMakeLists.txt
client/: CMakeLists.txt  main.cpp
client/tests/: CMakeLists.txt  test1.cpp
common/: CMakeLists.txt  stub.cpp
common/include/: broadcast.h  client_connection.h  connection.h  fwd.h  incoming_connection.h  server_connection.h
common/src/private/: asio_broadcast.cpp  asio_broadcast.h  asio_client_connection.cpp  asio_client_connection.h  asio_connection.cpp  asio_connection.h  asio_server_connection.cpp  asio_server_connection.h
server/: CMakeLists.txt  main.cpp
server/tests/: CMakeLists.txt
